2014-03-15  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_ccqp_smacof_nofold_sph_pip.m: (0.1.3)

	- I forgot to commit the changes to this function when I fixed the
	bug for cons_smacof_pip(). We were doing it wrong when we had
	fixed vertices. We were expecting the distance matrix to be
	d(isFree, isFree). I commited them by mistake with in the last
	commit. I'm not commiting after chaning the version number just so
	that we have this log message.

	* Add matlab/ManifoldToolbox/tri_sphparam.m: (0.1.0)
	* Add matlab/test/test_tri_sphparam.m: (0.1.0)

	- Spherical parametrization of closed triangular mesh.

	* Delete matlab/ManifoldToolbox/tri_sphparam_cons_smacof.m:

	- This function has been rewritten as tri_sphparam, to make it
	more modular. Instead of forcing a series of parametrizations
	(namely CMDS followed by constrained SMACOF with local
	neighbourhoods, followed by global constrained SMACOF), we want to
	have a function where we can call individual methods, and that
	it's not limited to the SMACOF approach (we'll want to add the
	spherical harmonics method too).

	* Add matlab/ManifoldToolbox/arclen2chord.m: (0.1.0)

	- Sphere arc length distances to Euclidean chord length distances.

	* Add matlab/ManifoldToolbox/chord2arclen.m: (0.1.0)

	- Euclidean chord length distances to sphere arc length distances.

2014-03-14  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam_cons_smacof.m: (0.2.0)

	- Uncomment the block to convert local neighbourhoods to convex
	hull of local neighbourhoods. Now this is run by default, and can
	be deactivated by the user.

	- Fix bug: Bad syntax in warning messages crashed function.

2014-03-13  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/tri_sphparam_cons_smacof.m: (0.1.0)

	- TRI_SPHPARAM_CONS_SMACOF Pseudo-isometric parametrization of
	closed triangular mesh using constrained SMACOF.

2014-03-09  Ramon Casero  <rcasero@gmail.com>
